client信息收集app+日志初始化配置加载

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ verify_ssl = true
 [packages]
 django = "*"
 pymysql = "*"
+wmi = "*"
+pypiwin32 = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
